--- a/app/src/main/res/layout/activity_tema.xml
+++ b/app/src/main/res/layout/activity_tema.xml
@@ -9,9 +9,13 @@
         android:id="@+id/materialCardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginTop="6dp"
         app:cardCornerRadius="16dp"
         app:cardElevation="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,8 +24,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/yolo_blue"
-            android:padding="16dp">
+            android:background="@color/yolo_blue">
 
             <ProgressBar
                 android:id="@+id/progressTheme"
