--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -6,7 +6,10 @@
     android:layout_height="match_parent"
     android:background="@drawable/menu_background"
     tools:context="org.bedu.okayapp.Inicio.Menu">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,4 +52,5 @@
         app:strokeWidth="2dp"
         android:layout_marginBottom="40dp"/>
     </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
