--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".Inicio.Profile"
     android:background="@color/lighter_gray">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -49,4 +52,5 @@
         android:layout_marginBottom="40dp"
         />
 </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
