--- a/app/src/main/res/layout/activity_resultado.xml
+++ b/app/src/main/res/layout/activity_resultado.xml
@@ -4,7 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/lighter_gray">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
     <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/card"
         android:layout_width="match_parent"
@@ -69,4 +72,5 @@
                 android:text="continuar" />
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
+    </ScrollView>
 </RelativeLayout>
