--- a/app/src/main/res/layout/activity_forgot_pasword.xml
+++ b/app/src/main/res/layout/activity_forgot_pasword.xml
@@ -30,11 +30,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/textView7"
-            android:textSize="14sp"
-            android:textColor="@color/grey_letters"
             android:layout_marginTop="25dp"
             android:text="Ingresa correo registrado para enviar un correo con los pasos para cambiar tu contraseña."
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="@color/grey_letters"
+            android:textSize="14sp" />
 
         <EditText
             android:id="@+id/log_in_editText_email"
