--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -44,13 +44,24 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/profile_button"
         android:layout_marginTop="40dp"
-        android:text="Nombre del usuario"
-        android:textSize="25sp"
-        android:textColor="@color/yolo_blue"
-        android:textAlignment="center"
-        android:textStyle="bold"
         android:layout_marginBottom="40dp"
-        />
+        android:text="Nombre del usuario"
+        android:textAlignment="center"
+        android:textColor="@color/yolo_blue"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/profile_butto_cambiar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/profile_txtView_userName"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="6dp"
+        android:onClick="contraseñas"
+        android:text="Cambiar contraseña" />
 </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
